--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@graphql-codegen/typescript": "^2.4.5",
     "@graphql-codegen/typescript-operations": "^2.3.2",
     "@graphql-codegen/typescript-react-query": "^3.5.5",
+    "@jest/types": "^29.4.3",
     "@lhci/cli": "^0.9.0",
     "@mizdra/eslint-plugin-layout-shift": "^1.0.1",
     "@next/bundle-analyzer": "^13.0.3",
@@ -120,7 +121,7 @@
     "prettier": "^2.5.1",
     "svgo": "^3.0.2",
     "ts-jest": "^27.1.3",
-    "tsconfig-paths-jest": "^0.0.1",
+    "tsconfig-paths-jest-mapper": "^1.4.0",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "type-fest": "^2.12.0",
     "typescript": "^4.4.2"
