--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "start": "NODE_ICU_DATA=node_modules/full-icu next start",
     "test": "TZ=UTC jest --maxWorkers=50%",
     "test:watch": "TZ=UTC jest --watch --maxWorkers=25%",
-    "test:strict": "TZ=UTC jest --config=jest.config.strict.js --runInBand",
+    "test:strict": "TZ=UTC jest --config=jest.config.strict.ts --runInBand",
     "extract": "formatjs extract 'src/**/*.ts*' --ignore 'src/**/*.d.ts*' --throws --extract-source-location --id-interpolation-pattern '[sha512:contenthash:base64:6]' --out-file public/lang/en.json --format lang-formatter.js",
     "extract:new": "./lang-extract-new.js",
     "compile": "formatjs compile-folder --ast public/lang public/compiled-lang --format lang-formatter.js",
