--- a/package.json
+++ b/package.json
@@ -1,137 +1,138 @@
 {
-  "name": "audioverse-next",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "NODE_ICU_DATA=node_modules/full-icu next build",
-    "postbuild": "next-sitemap",
-    "build:dev": "ENV_OVERRIDE=development NODE_ICU_DATA=node_modules/full-icu next build --debug",
-    "build:webpack-only": "ENV_OVERRIDE=development NODE_ICU_DATA=node_modules/full-icu ./next-build-webpack-only.js",
-    "audit": "audit-ci --config audit-ci.json",
-    "checkTs": "tsc --noEmit",
-    "format": "prettier --write .",
-    "lint": "eslint --max-warnings 0 .",
-    "lint:fix": "eslint --max-warnings 0 --fix .",
-    "start": "NODE_ICU_DATA=node_modules/full-icu next start",
-    "test": "TZ=UTC jest --maxWorkers=50%",
-    "test:watch": "TZ=UTC jest --watch --maxWorkers=25%",
-    "test:strict": "TZ=UTC jest --config=jest.config.strict.ts --runInBand",
-    "extract": "formatjs extract 'src/**/*.ts*' --ignore 'src/**/*.d.ts*' --throws --extract-source-location --id-interpolation-pattern '[sha512:contenthash:base64:6]' --out-file public/lang/en.json --format lang-formatter.js",
-    "extract:new": "./lang-extract-new.js",
-    "compile": "formatjs compile-folder --ast public/lang public/compiled-lang --format lang-formatter.js",
-    "precommit": "npm run format && npm run lint:fix && npm run checkTs",
-    "graphql:codegen": "graphql-codegen --config .graphqlrc.yml",
-    "lighthouse": "npx lhci autorun",
-    "analyze": "ANALYZE=true npm run build:webpack-only",
-    "analyze:server": "BUNDLE_ANALYZE=server npm run build:webpack-only",
-    "analyze:browser": "BUNDLE_ANALYZE=browser npm run build:webpack-only",
-    "svgo": "svgo -f ./public/img/icons-raw -o ./public/img/icons",
-    "pa11y": "pa11y-ci --sitemap http://localhost:3000/sitemap-0.xml --sitemap-find https://www.audioverse.org --sitemap-replace http://localhost:3000 --sitemap-exclude 'https?:\\/\\/[\\w\\.-]+\\/(?!en)\\w\\w\\/'"
-  },
-  "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@silvermine/videojs-airplay": "^1.1.0",
-    "@silvermine/videojs-chromecast": "^1.3.3",
-    "clsx": "^1.2.1",
-    "cookie": "^0.4.1",
-    "dayjs": "^1.10.7",
-    "feed": "git+https://mattleff@github.com/mattleff/feed.git#custome-elements-build",
-    "full-icu": "^1.4.0",
-    "he": "^1.2.0",
-    "inter-ui": "^3.19.3",
-    "js-cookie": "^3.0.1",
-    "lodash": "^4.17.20",
-    "masonic": "^3.7.0",
-    "next": "^13.0.3",
-    "next-pwa": "^5.4.4",
-    "node-forge": "^1.3.0",
-    "normalize.css": "^8.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-facebook-login": "^4.1.1",
-    "react-google-login": "^5.2.2",
-    "react-intl": "^5.20.12",
-    "react-query": "^3.25.1",
-    "react-tooltip": "^4.2.21",
-    "sass": "^1.42.1",
-    "striptags": "^3.2.0",
-    "video.js": "^7.21.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.17.5",
-    "@babel/plugin-proposal-optional-chaining": "^7.16.7",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
-    "@babel/preset-typescript": "^7.16.7",
-    "@calm/eslint-plugin-react-intl": "^1.4.1",
-    "@formatjs/cli": "^4.8.2",
-    "@graphql-codegen/add": "^3.1.1",
-    "@graphql-codegen/cli": "^2.6.2",
-    "@graphql-codegen/near-operation-file-preset": "^2.5.0",
-    "@graphql-codegen/schema-ast": "^2.4.1",
-    "@graphql-codegen/typescript": "^2.4.5",
-    "@graphql-codegen/typescript-operations": "^2.3.2",
-    "@graphql-codegen/typescript-react-query": "^3.5.5",
-    "@jest/types": "^29.4.3",
-    "@lhci/cli": "^0.9.0",
-    "@mizdra/eslint-plugin-layout-shift": "^1.0.1",
-    "@next/bundle-analyzer": "^13.0.3",
-    "@next/eslint-plugin-next": "^13.0.3",
-    "@svgr/webpack": "^6.2.1",
-    "@testing-library/dom": "^8.11.3",
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/cookie": "^0.4.1",
-    "@types/he": "^1.1.2",
-    "@types/jest-when": "^3.5.0",
-    "@types/js-cookie": "^3.0.2",
-    "@types/lodash": "^4.14.178",
-    "@types/node-forge": "^1.0.0",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
-    "@types/react-facebook-login": "^4.1.4",
-    "@types/react-is": "^17.0.3",
-    "@types/video.js": "^7.3.31",
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
-    "audit-ci": "^6.3.0",
-    "babel-jest": "^27.5.1",
-    "babel-loader": "^8.2.3",
-    "babel-plugin-react-intl": "^8.2.4",
-    "eslint": "^8.9.0",
-    "eslint-config-next": "^13.0.3",
-    "eslint-plugin-formatjs": "^3.0.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jest-dom": "^4.0.1",
-    "eslint-plugin-lodash": "^7.4.0",
-    "eslint-plugin-react": "^7.31.11",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-testing-library": "^5.0.5",
-    "graphql": "^16.3.0",
-    "graphql-tag": "^2.12.6",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.5.1",
-    "jest-canvas-mock": "^2.3.1",
-    "jest-date-mock": "^1.0.8",
-    "jest-when": "^3.5.1",
-    "next-sitemap": "^2.5.10",
-    "pa11y-ci": "^3.0.1",
-    "pa11y-ci-reporter-cli-summary": "^2.0.2",
-    "pa11y-ci-reporter-html": "^5.0.2",
-    "prettier": "^2.5.1",
-    "svgo": "^3.0.2",
-    "ts-jest": "^27.1.3",
-    "tsconfig-paths-jest-mapper": "^1.4.0",
-    "tsconfig-paths-webpack-plugin": "^3.5.2",
-    "type-fest": "^2.12.0",
-    "typescript": "^4.4.2"
-  },
-  "nextBundleAnalysis": {
-    "budget": 230400,
-    "budgetPercentIncreaseRed": 5,
-    "showDetails": true
-  }
+    "name": "audioverse-next",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "NODE_ICU_DATA=node_modules/full-icu next build",
+        "postbuild": "next-sitemap",
+        "build:dev": "ENV_OVERRIDE=development NODE_ICU_DATA=node_modules/full-icu next build --debug",
+        "build:webpack-only": "ENV_OVERRIDE=development NODE_ICU_DATA=node_modules/full-icu ./next-build-webpack-only.js",
+        "audit": "audit-ci --config audit-ci.json",
+        "checkTs": "tsc --noEmit",
+        "format": "prettier --write .",
+        "lint": "eslint --max-warnings 0 .",
+        "lint:fix": "eslint --max-warnings 0 --fix .",
+        "start": "NODE_ICU_DATA=node_modules/full-icu next start",
+        "test": "TZ=UTC jest --maxWorkers=50%",
+        "test:watch": "TZ=UTC jest --watch --maxWorkers=25%",
+        "test:strict": "TZ=UTC jest --config=jest.config.strict.ts --runInBand",
+        "extract": "formatjs extract 'src/**/*.ts*' --ignore 'src/**/*.d.ts*' --throws --extract-source-location --id-interpolation-pattern '[sha512:contenthash:base64:6]' --out-file public/lang/en.json --format lang-formatter.js",
+        "extract:new": "./lang-extract-new.js",
+        "compile": "formatjs compile-folder --ast public/lang public/compiled-lang --format lang-formatter.js",
+        "precommit": "npm run format && npm run lint:fix && npm run checkTs",
+        "graphql:codegen": "tsc -p ./graphql-codegen/tsconfig.json && graphql-codegen --config .graphqlrc.yml",
+        "lighthouse": "npx lhci autorun",
+        "analyze": "ANALYZE=true npm run build:webpack-only",
+        "analyze:server": "BUNDLE_ANALYZE=server npm run build:webpack-only",
+        "analyze:browser": "BUNDLE_ANALYZE=browser npm run build:webpack-only",
+        "svgo": "svgo -f ./public/img/icons-raw -o ./public/img/icons",
+        "pa11y": "pa11y-ci --sitemap http://localhost:3000/sitemap-0.xml --sitemap-find https://www.audioverse.org --sitemap-replace http://localhost:3000 --sitemap-exclude 'https?:\\/\\/[\\w\\.-]+\\/(?!en)\\w\\w\\/'"
+    },
+    "dependencies": {
+        "@material-ui/core": "^4.12.3",
+        "@silvermine/videojs-airplay": "^1.1.0",
+        "@silvermine/videojs-chromecast": "^1.3.3",
+        "clsx": "^1.2.1",
+        "cookie": "^0.4.1",
+        "dayjs": "^1.10.7",
+        "feed": "git+https://mattleff@github.com/mattleff/feed.git#custome-elements-build",
+        "full-icu": "^1.4.0",
+        "he": "^1.2.0",
+        "inter-ui": "^3.19.3",
+        "js-cookie": "^3.0.1",
+        "lodash": "^4.17.20",
+        "masonic": "^3.7.0",
+        "next": "^13.0.3",
+        "next-pwa": "^5.4.4",
+        "node-forge": "^1.3.0",
+        "normalize.css": "^8.0.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-facebook-login": "^4.1.1",
+        "react-google-login": "^5.2.2",
+        "react-intl": "^5.20.12",
+        "react-query": "^3.25.1",
+        "react-tooltip": "^4.2.21",
+        "sass": "^1.42.1",
+        "striptags": "^3.2.0",
+        "video.js": "^7.21.1"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.17.5",
+        "@babel/plugin-proposal-optional-chaining": "^7.16.7",
+        "@babel/preset-env": "^7.16.11",
+        "@babel/preset-react": "^7.16.7",
+        "@babel/preset-typescript": "^7.16.7",
+        "@calm/eslint-plugin-react-intl": "^1.4.1",
+        "@formatjs/cli": "^4.8.2",
+        "@graphql-codegen/add": "^3.1.1",
+        "@graphql-codegen/cli": "^2.6.2",
+        "@graphql-codegen/near-operation-file-preset": "^2.5.0",
+        "@graphql-codegen/plugin-helpers": "^4.2.0",
+        "@graphql-codegen/schema-ast": "^2.4.1",
+        "@graphql-codegen/typescript": "^2.4.5",
+        "@graphql-codegen/typescript-operations": "^2.3.2",
+        "@graphql-codegen/typescript-react-query": "^3.5.5",
+        "@jest/types": "^29.4.3",
+        "@lhci/cli": "^0.9.0",
+        "@mizdra/eslint-plugin-layout-shift": "^1.0.1",
+        "@next/bundle-analyzer": "^13.0.3",
+        "@next/eslint-plugin-next": "^13.0.3",
+        "@svgr/webpack": "^6.2.1",
+        "@testing-library/dom": "^8.11.3",
+        "@testing-library/jest-dom": "^5.16.2",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^13.5.0",
+        "@types/cookie": "^0.4.1",
+        "@types/he": "^1.1.2",
+        "@types/jest-when": "^3.5.0",
+        "@types/js-cookie": "^3.0.2",
+        "@types/lodash": "^4.14.178",
+        "@types/node-forge": "^1.0.0",
+        "@types/react": "^17.0.39",
+        "@types/react-dom": "^17.0.11",
+        "@types/react-facebook-login": "^4.1.4",
+        "@types/react-is": "^17.0.3",
+        "@types/video.js": "^7.3.31",
+        "@typescript-eslint/eslint-plugin": "^5.12.0",
+        "@typescript-eslint/parser": "^5.12.0",
+        "audit-ci": "^6.3.0",
+        "babel-jest": "^27.5.1",
+        "babel-loader": "^8.2.3",
+        "babel-plugin-react-intl": "^8.2.4",
+        "eslint": "^8.9.0",
+        "eslint-config-next": "^13.0.3",
+        "eslint-plugin-formatjs": "^3.0.0",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-jest-dom": "^4.0.1",
+        "eslint-plugin-lodash": "^7.4.0",
+        "eslint-plugin-react": "^7.31.11",
+        "eslint-plugin-react-hooks": "^4.3.0",
+        "eslint-plugin-simple-import-sort": "^10.0.0",
+        "eslint-plugin-testing-library": "^5.0.5",
+        "graphql": "^16.3.0",
+        "graphql-tag": "^2.12.6",
+        "identity-obj-proxy": "^3.0.0",
+        "jest": "^27.5.1",
+        "jest-canvas-mock": "^2.3.1",
+        "jest-date-mock": "^1.0.8",
+        "jest-when": "^3.5.1",
+        "next-sitemap": "^2.5.10",
+        "pa11y-ci": "^3.0.1",
+        "pa11y-ci-reporter-cli-summary": "^2.0.2",
+        "pa11y-ci-reporter-html": "^5.0.2",
+        "prettier": "^2.8.8",
+        "svgo": "^3.0.2",
+        "ts-jest": "^27.1.3",
+        "tsconfig-paths-jest-mapper": "^1.4.0",
+        "tsconfig-paths-webpack-plugin": "^3.5.2",
+        "type-fest": "^2.12.0",
+        "typescript": "^4.4.2"
+    },
+    "nextBundleAnalysis": {
+        "budget": 230400,
+        "budgetPercentIncreaseRed": 5,
+        "showDetails": true
+    }
 }
