--- a/graphql-codegen/tsconfig.json
+++ b/graphql-codegen/tsconfig.json
@@ -1,24 +1,17 @@
 {
-    "compilerOptions": {
-        "module": "commonjs",
-        "removeComments": true,
-        "emitDecoratorMetadata": true,
-        "experimentalDecorators": true,
-        "allowSyntheticDefaultImports": true,
-        "target": "es6",
-        "lib": [
-            "es2017",
-            "es2019",
-            "dom"
-        ],
-        "outDir": "./dist",
-        "baseUrl": "./",
-        "skipLibCheck": true
-    },
-    "exclude": [
-        "./*.js"
-    ],
-    "include": [
-        "*.ts"
-    ]
+	"compilerOptions": {
+		"module": "commonjs",
+		"removeComments": true,
+		"emitDecoratorMetadata": true,
+		"experimentalDecorators": true,
+		"allowSyntheticDefaultImports": true,
+		"target": "es6",
+		"lib": ["es2017", "es2019", "dom"],
+		"outDir": "./dist",
+		"baseUrl": "./",
+		"skipLibCheck": true
+	},
+	"extends": "../tsconfig.json",
+	"exclude": ["./*.js"],
+	"include": ["*.ts"]
 }
