--- a/graphql-codegen/tsconfig.json
+++ b/graphql-codegen/tsconfig.json
@@ -9,7 +9,8 @@
 		"lib": ["es2017", "es2019", "dom"],
 		"outDir": "./dist",
 		"baseUrl": "./",
-		"skipLibCheck": true
+		"skipLibCheck": true,
+		"noEmit": false
 	},
 	"extends": "../tsconfig.json",
 	"exclude": ["./*.js"],
