--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
         "@graphql-codegen/typescript": "^2.4.5",
         "@graphql-codegen/typescript-operations": "^2.3.2",
         "@graphql-codegen/typescript-react-query": "^3.5.5",
+        "@graphql-codegen/visitor-plugin-common": "^3.1.1",
         "@jest/types": "^29.4.3",
         "@lhci/cli": "^0.9.0",
         "@mizdra/eslint-plugin-layout-shift": "^1.0.1",
