--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "react-tooltip": "^4.2.21",
         "sass": "^1.42.1",
         "striptags": "^3.2.0",
+        "swiper": "^9.3.2",
         "video.js": "^7.21.1"
     },
     "devDependencies": {
