update precommit command

--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
         "build:webpack-only": "ENV_OVERRIDE=development NODE_ICU_DATA=node_modules/full-icu ./next-build-webpack-only.js",
         "audit": "audit-ci --config audit-ci.json",
         "checkTs": "tsc --noEmit",
-        "format": "prettier --write .",
+        "format": "prettier --write --loglevel warn .",
         "lint": "eslint --max-warnings 0 .",
+        "lint:list": "DEBUG=eslint:cli-engine npm run lint",
         "lint:fix": "eslint --max-warnings 0 --fix .",
         "start": "NODE_ICU_DATA=node_modules/full-icu next start",
         "test": "TZ=UTC jest --maxWorkers=50%",
         "test:watch": "TZ=UTC jest --watch --maxWorkers=25%",
         "test:strict": "TZ=UTC jest --config=jest.config.strict.ts --runInBand",
-        "extract": "formatjs extract 'src/**/*.ts*' --ignore 'src/**/*.d.ts*' --throws --extract-source-location --id-interpolation-pattern '[sha512:contenthash:base64:6]' --out-file public/lang/en.json --format lang-formatter.js",
-        "extract:new": "./lang-extract-new.js",
-        "compile": "formatjs compile-folder --ast public/lang public/compiled-lang --format lang-formatter.js",
-        "precommit": "npm run format && npm run lint:fix && npm run checkTs",
+        "intl:extract": "formatjs extract 'src/**/*.ts*' --ignore 'src/**/*.d.ts*' --throws --extract-source-location --id-interpolation-pattern '[sha512:contenthash:base64:6]' --out-file public/lang/en.json --format lang-formatter.js",
+        "intl:extract:new": "./lang-extract-new.js",
+        "intl:compile": "formatjs compile-folder --ast public/lang public/compiled-lang --format lang-formatter.js",
+        "precommit": "concurrently --max-processes=50% \"npm:format\" \"npm:lint:fix\" \"npm:checkTs\" \"npm:intl:extract\" \"npm:intl:compile\"",
         "graphql:codegen": "tsc -p ./graphql-codegen/tsconfig.json && graphql-codegen --config .graphqlrc.yml",
         "lighthouse": "npx lhci autorun",
         "analyze": "ANALYZE=true npm run build:webpack-only",
@@ -102,6 +103,7 @@
         "babel-jest": "^27.5.1",
         "babel-loader": "^8.2.3",
         "babel-plugin-react-intl": "^8.2.4",
+        "concurrently": "^8.2.0",
         "eslint": "^8.42.0",
         "eslint-config-next": "^13.0.3",
         "eslint-plugin-formatjs": "^3.0.0",
