--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "next dev",
+        "dev": "concurrently \"npx update-browserslist-db@latest\" \"npm:graphql:codegen:watch\" \"next dev\"",
         "build": "NODE_ICU_DATA=node_modules/full-icu next build",
         "postbuild": "next-sitemap",
         "build:dev": "ENV_OVERRIDE=development NODE_ICU_DATA=node_modules/full-icu next build --debug",
@@ -23,6 +23,7 @@
         "intl:compile": "formatjs compile-folder --ast public/lang public/compiled-lang --format lang-formatter.js",
         "precommit": "concurrently --max-processes=50% \"npm:format\" \"npm:lint:fix\" \"npm:checkTs\" \"npm:intl:extract\" \"npm:intl:compile\"",
         "graphql:codegen": "tsc -p ./graphql-codegen/tsconfig.json && graphql-codegen --config .graphqlrc.yml",
+        "graphql:codegen:watch": "npm run graphql:codegen -- --watch",
         "lighthouse": "npx lhci autorun",
         "analyze": "ANALYZE=true npm run build:webpack-only",
         "analyze:server": "BUNDLE_ANALYZE=server npm run build:webpack-only",
