--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "precommit": "concurrently --max-processes=50% \"npm:format\" \"npm:lint:fix\" \"npm:checkTs\" \"npm:intl:extract\" \"npm:intl:compile\"",
         "graphql:codegen": "tsc -p ./graphql-codegen/tsconfig.json && graphql-codegen --config .graphqlrc.yml",
         "graphql:codegen:watch": "npm run graphql:codegen -- --watch",
+        "graphql:purge": "find . -type d -name __generated__ -exec rm -r '{}' \\; -prune",
         "lighthouse": "npx lhci autorun",
         "analyze": "ANALYZE=true npm run build:webpack-only",
         "analyze:server": "BUNDLE_ANALYZE=server npm run build:webpack-only",
