--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "sass": "^1.42.1",
         "striptags": "^3.2.0",
         "swiper": "^9.3.2",
+        "use-debounce": "^9.0.4",
         "video.js": "^7.21.1"
     },
     "devDependencies": {
