--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "build:webpack-only": "ENV_OVERRIDE=development NODE_ICU_DATA=node_modules/full-icu ./next-build-webpack-only.js",
         "audit": "audit-ci --config audit-ci.json",
         "checkTs": "tsc --noEmit",
-        "format": "prettier --write --loglevel warn .",
+        "format:fix": "prettier --write --loglevel warn .",
+        "format:check": "prettier --check --loglevel warn .",
         "lint": "eslint --max-warnings 0 .",
         "lint:list": "DEBUG=eslint:cli-engine npm run lint",
         "lint:fix": "eslint --max-warnings 0 --fix .",
@@ -21,7 +22,7 @@
         "intl:extract": "formatjs extract 'src/**/*.ts*' --ignore 'src/**/*.d.ts*' --throws --extract-source-location --id-interpolation-pattern '[sha512:contenthash:base64:6]' --out-file public/lang/en.json --format lang-formatter.js",
         "intl:extract:new": "./scripts/lang-extract-new.js",
         "intl:compile": "formatjs compile-folder --ast public/lang public/compiled-lang --format lang-formatter.js",
-        "precommit": "concurrently --max-processes=50% \"npm:format\" \"npm:lint:fix\" \"npm:checkTs\" \"npm run intl:extract && npm run intl:compile\"",
+        "precommit": "concurrently --max-processes=50% \"npm:format:fix\" \"npm:lint:fix\" \"npm:checkTs\" \"npm run intl:extract && npm run intl:compile\"",
         "graphql:codegen": "tsc -p ./graphql-codegen/tsconfig.json && graphql-codegen --config .graphqlrc.yml",
         "graphql:codegen:watch": "npm run graphql:codegen -- --watch",
         "graphql:purge": "find . -type d -name __generated__ -exec rm -r '{}' \\; -prune",
