--- a/.github/workflows/nextjs_bundle_analysis.yml
+++ b/.github/workflows/nextjs_bundle_analysis.yml
@@ -37,6 +37,9 @@ jobs:
           path: .next/cache
           key: ${{ runner.os }}-build-${{ env.cache-name }}
 
+      - name: Run codegen
+        run: npm run graphql:codegen
+
       - name: Build next.js app
         run: npm run build:webpack-only
 
