--- a/.graphqlrc.yml
+++ b/.graphqlrc.yml
@@ -26,6 +26,9 @@ generates:
   src/__generated__/prefetch.ts:
     plugins:
       - 'graphql-codegen/dist/graphql-plugin-prefetch.js'
+  src/__generated__/loaders.ts:
+    plugins:
+      - 'graphql-codegen/dist/graphql-plugin-loaders.js'
   src/__generated__/mock-data.ts:
     plugins:
       - add:
