--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "predev": "concurrently \"npx update-browserslist-db@latest\" \"npm:graphql:codegen\"",
         "dev": "concurrently \"npm:graphql:codegen:watch\" \"next dev\"",
-        "build": "NODE_ICU_DATA=node_modules/full-icu next build",
+        "build": "SET NODE_ICU_DATA=node_modules/full-icu next build",
         "postbuild": "next-sitemap",
         "build:dev": "ENV_OVERRIDE=development NODE_ICU_DATA=node_modules/full-icu next build --debug",
         "build:webpack-only": "ENV_OVERRIDE=development NODE_ICU_DATA=node_modules/full-icu ./next-build-webpack-only.js",
@@ -131,9 +131,9 @@
         "jest-date-mock": "^1.0.8",
         "jest-when": "^3.5.2",
         "next-sitemap": "^4.1.3",
-        "pa11y-ci": "^3.0.1",
-        "pa11y-ci-reporter-cli-summary": "^3.0.0",
-        "pa11y-ci-reporter-html": "^6.0.0",
+        "pa11y-ci": "^2.4.2",
+        "pa11y-ci-reporter-cli-summary": "^0.0.1",
+        "pa11y-ci-reporter-html": "^3.0.3",
         "prettier": "^2.8.8",
         "svgo": "^3.0.2",
         "ts-jest": "^27.1.3",
