--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,5 +33,5 @@
 		"incremental": true
 	},
 	"exclude": ["./*.js"],
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
+	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/**/*.ts"]
 }
