--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
         "sass": "^1.42.1",
         "striptags": "^3.2.0",
         "swiper": "^9.4.1",
+        "ts-node": "^10.9.1",
         "use-debounce": "^9.0.4",
         "video.js": "^7.21.1"
     },
