--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "predev": "concurrently \"npx update-browserslist-db@latest\" \"npm:graphql:codegen\"",
         "dev": "concurrently \"npm:graphql:codegen:watch\" \"next dev\"",
-        "build": "NODE_ICU_DATA=node_modules/full-icu next build",
+        "build": "cross-env NODE_ICU_DATA=node_modules/full-icu next build",
         "postbuild": "next-sitemap",
         "build:dev": "ENV_OVERRIDE=development NODE_ICU_DATA=node_modules/full-icu next build --debug",
         "build:webpack-only": "ENV_OVERRIDE=development NODE_ICU_DATA=node_modules/full-icu ./next-build-webpack-only.js",
