--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     },
     "dependencies": {
         "@material-ui/core": "^4.12.4",
+        "@segment/analytics-next": "^1.60.0",
         "@silvermine/videojs-airplay": "^1.1.0",
         "@silvermine/videojs-chromecast": "^1.3.3",
         "@tanstack/react-query": "^4.29.12",
