--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 16.15.0
+          node-version: 16.x
       - uses: actions/cache@v2
         with:
           path: ~/.npm
@@ -26,7 +26,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 16.15.0
+          node-version: 16.x
       - uses: actions/cache@v2
         with:
           path: ~/.npm
@@ -45,7 +45,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 16.15.0
+          node-version: 16.x
       - uses: actions/cache@v2
         with:
           path: ~/.npm
@@ -63,7 +63,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 16.15.0
+          node-version: 16.x
       - uses: actions/cache@v2
         with:
           path: ~/.npm
@@ -83,7 +83,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 16.15.0
+          node-version: 16.x
       - uses: actions/cache@v2
         with:
           path: ~/.npm
@@ -105,7 +105,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 16.15.0
+          node-version: 16.x
       - uses: actions/cache@v2
         with:
           path: ~/.npm
