--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "test": "TZ=UTC jest --maxWorkers=50%",
         "test:watch": "TZ=UTC jest --watch --maxWorkers=25%",
         "test:strict": "TZ=UTC jest --config=jest.config.strict.ts --runInBand",
-        "intl:extract": "formatjs extract 'src/**/*.ts*' --ignore 'src/**/*.d.ts*' --throws --extract-source-location --id-interpolation-pattern '[sha512:contenthash:base64:6]' --out-file public/lang/en.json --format lang-formatter.js",
+        "intl:extract": "tsx ./scripts/lang-extract.ts",
         "intl:extract:new": "./scripts/lang-extract-new.js",
         "intl:compile": "formatjs compile-folder --ast public/lang public/compiled-lang --format lang-formatter.js",
         "precommit": "concurrently --max-processes=50% \"npm:format:fix\" \"npm:lint:fix\" \"npm:checkTs\" \"npm run intl:compile\"",
@@ -76,6 +76,7 @@
         "@babel/preset-typescript": "^7.16.7",
         "@calm/eslint-plugin-react-intl": "^1.4.1",
         "@formatjs/cli": "^6.1.3",
+        "@formatjs/cli-lib": "^6.4.0",
         "@graphql-codegen/add": "^5.0.0",
         "@graphql-codegen/cli": "^4.0.1",
         "@graphql-codegen/near-operation-file-preset": "^2.5.0",
@@ -140,6 +141,7 @@
         "ts-jest": "^27.1.3",
         "tsconfig-paths-jest-mapper": "^1.4.0",
         "tsconfig-paths-webpack-plugin": "^3.5.2",
+        "tsx": "^4.9.3",
         "type-fest": "^4.3.1",
         "typescript": "^5.1.6"
     },
