add lang summary job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -78,6 +78,8 @@ jobs:
         run: npm run test:strict
   intl:
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
     steps:
       - uses: actions/checkout@v2
       - name: Setup Node.js
@@ -98,6 +100,10 @@ jobs:
         run: npm run intl:compile
       - name: Check no changes were made
         run: git diff --exit-code
+      - name: Add comment
+        uses: flydiverny/github-typescript@v1
+        with:
+          script-file: .github/workflows/scripts/lang-summary.ts
   codegen:
     runs-on: ubuntu-latest
     steps:
