--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "react-google-login": "^5.2.2",
         "react-intl": "^6.4.4",
         "sass": "^1.42.1",
+        "sharp": "^0.33.4",
         "striptags": "^3.2.0",
         "swiper": "^9.4.1",
         "ts-node": "^10.9.1",
