add intl:extract to precommit hook

--- a/package.json
+++ b/package.json
@@ -20,9 +20,8 @@
         "test": "TZ=UTC jest --maxWorkers=50%",
         "test:watch": "TZ=UTC jest --watch --maxWorkers=25%",
         "test:strict": "TZ=UTC jest --config=jest.config.strict.ts --runInBand",
-        "intl:extract": "tsx ./scripts/lang-extract.ts",
-        "intl:compile": "formatjs compile-folder --ast public/lang public/compiled-lang --format lang-formatter.js",
-        "precommit": "concurrently --max-processes=50% \"npm:format:fix\" \"npm:lint:fix\" \"npm:checkTs\" \"npm run intl:compile\"",
+        "intl": "tsx ./scripts/lang-extract.ts && formatjs compile-folder --ast public/lang public/compiled-lang --format lang-formatter.js",
+        "precommit": "concurrently --max-processes=50% \"npm:format:fix\" \"npm:lint:fix\" \"npm:checkTs\" \"npm run intl\"",
         "graphql:codegen": "tsc -p ./graphql-codegen/tsconfig.json && graphql-codegen --config .graphqlrc.yml",
         "graphql:codegen:watch": "npm run graphql:codegen -- --watch",
         "graphql:purge": "find . -type d -name __generated__ -exec rm -r '{}' \\; -prune",
