--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,10 +92,8 @@ jobs:
             ${{ runner.os }}-node-
       - name: Install dependencies
         run: npm ci
-      - name: Extract
-        run: npm run intl:extract
-      - name: Compile
-        run: npm run intl:compile
+      - name: Extract & Compile
+        run: npm run intl
       - name: Check no changes were made
         run: git diff --exit-code
   intl-summary:
