--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "test:watch": "TZ=UTC jest --watch --maxWorkers=25%",
         "test:strict": "TZ=UTC jest --config=jest.config.strict.ts --runInBand",
         "intl": "tsx ./scripts/lang-extract.ts && formatjs compile-folder --ast public/lang public/compiled-lang --format lang-formatter.js",
-        "precommit": "concurrently --max-processes=50% \"npm:format:fix\" \"npm:lint:fix\" \"npm:checkTs\" \"npm run intl\"",
+        "precommit": "concurrently --max-processes=50% \"npm:format:fix\" \"npm:lint:fix\" \"npm:checkTs\" \"npm:intl\"",
         "graphql:codegen": "tsc -p ./graphql-codegen/tsconfig.json && graphql-codegen --config .graphqlrc.yml",
         "graphql:codegen:watch": "npm run graphql:codegen -- --watch",
         "graphql:purge": "find . -type d -name __generated__ -exec rm -r '{}' \\; -prune",
