--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "postbuild": "next-sitemap",
         "build:dev": "ENV_OVERRIDE=development NODE_ICU_DATA=node_modules/full-icu next build --debug",
         "build:webpack-only": "ENV_OVERRIDE=development NODE_ICU_DATA=node_modules/full-icu ./next-build-webpack-only.js",
+        "build:record": "./scripts/record.sh",
         "audit": "audit-ci --config audit-ci.json",
         "checkTs": "tsc --noEmit",
         "format:fix": "prettier --write --loglevel warn .",
@@ -97,6 +98,7 @@
         "@testing-library/user-event": "^14.4.3",
         "@types/cookie": "^0.4.1",
         "@types/he": "^1.2.0",
+        "@types/http-proxy": "^1.17.15",
         "@types/jest-when": "^3.5.2",
         "@types/js-cookie": "^3.0.2",
         "@types/lodash": "^4.14.195",
@@ -114,6 +116,7 @@
         "babel-plugin-react-intl": "^8.2.4",
         "concurrently": "^8.2.1",
         "cross-env": "^7.0.3",
+        "dotenv": "^16.4.5",
         "eslint": "^8.43.0",
         "eslint-config-next": "^13.0.3",
         "eslint-plugin-formatjs": "^3.0.0",
@@ -127,6 +130,7 @@
         "graphql": "^16.8.1",
         "graphql-codegen-typescript-mock-data": "^3.5.0",
         "graphql-tag": "^2.12.6",
+        "http-proxy": "^1.18.1",
         "husky": "^8.0.3",
         "identity-obj-proxy": "^3.0.0",
         "jest": "^27.5.1",
