--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
         "prepare": "husky install"
     },
     "dependencies": {
-        "@material-ui/core": "^4.12.4",
+        "@emotion/styled": "^11.13.0",
+        "@mui/material": "^5.16.7",
         "@segment/analytics-next": "^1.60.0",
         "@silvermine/videojs-airplay": "^1.1.0",
         "@silvermine/videojs-chromecast": "^1.3.3",
