--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     },
     "dependencies": {
         "@emotion/styled": "^11.13.0",
+        "@greatsumini/react-facebook-login": "^3.3.3",
+        "@leecheuk/react-google-login": "^5.4.1",
         "@mui/material": "^5.16.7",
         "@segment/analytics-next": "^1.60.0",
         "@silvermine/videojs-airplay": "^1.1.0",
@@ -57,8 +59,6 @@
         "normalize.css": "^8.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-facebook-login": "^4.1.1",
-        "react-google-login": "^5.2.2",
         "react-intl": "^6.4.4",
         "sass": "^1.42.1",
         "sharp": "^0.33.4",
@@ -122,15 +122,16 @@
         "graphql-tag": "^2.12.6",
         "husky": "^8.0.3",
         "identity-obj-proxy": "^3.0.0",
-        "jest": "^27.5.1",
+        "jest": "^29.7.0",
         "jest-canvas-mock": "^2.5.1",
         "jest-date-mock": "^1.0.8",
+        "jest-environment-jsdom": "^29.7.0",
         "jest-when": "^3.5.2",
         "next-sitemap": "^4.1.3",
         "pa11y-ci": "^2.4.2",
         "prettier": "^2.8.8",
         "svgo": "^3.0.2",
-        "ts-jest": "^27.1.3",
+        "ts-jest": "^29.2.4",
         "tsconfig-paths-jest-mapper": "^1.4.0",
         "tsconfig-paths-webpack-plugin": "^3.5.2",
         "tsx": "^4.9.3",
