[WIP] Add necessary settings for graphql update

--- a/.graphqlrc.yml
+++ b/.graphqlrc.yml
@@ -48,6 +48,8 @@ generates:
     config:
       fetcher: '~lib/api/graphqlFetcher#graphqlFetcher'
       addInfiniteQuery: true
+      reactQueryVersion: 5
+      legacyMode: false
       dedupeFragments: true
       avoidOptionals: true
       defaultScalarType: unknown
