--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
         "analyze:browser": "BUNDLE_ANALYZE=browser npm run build:webpack-only",
         "svgo": "svgo -f ./public/img/icons-raw -o ./public/img/icons",
         "pa11y": "pa11y-ci --sitemap http://localhost:3000/sitemap-0.xml --sitemap-find https://www.audioverse.org --sitemap-replace http://localhost:3000 --sitemap-exclude 'https?:\\/\\/[\\w\\.-]+\\/(?!en)\\w\\w\\/'",
-        "prepare": "husky install"
+        "prepare": "husky"
     },
     "dependencies": {
         "@emotion/styled": "^11.13.0",
