--- a/.github/workflows/nextjs_bundle_analysis.yml
+++ b/.github/workflows/nextjs_bundle_analysis.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 16.15.0
+          node-version-file: '.nvmrc'
 
       - name: Install dependencies
         uses: bahmutov/npm-install@v1
