--- a/package.json
+++ b/package.json
@@ -41,8 +41,9 @@
         "@segment/analytics-next": "^1.73.0",
         "@silvermine/videojs-airplay": "^1.3.0",
         "@silvermine/videojs-chromecast": "^1.5.0",
-        "@tanstack/react-query": "^5.52.2",
-        "@tanstack/react-query-devtools": "^5.52.2",
+        "@tanstack/react-query": "^5.56.2",
+        "@tanstack/react-query-devtools": "^5.56.2",
+        "caniuse-lite": "^1.0.30001662",
         "clsx": "^2.1.1",
         "cookie": "^0.6.0",
         "dayjs": "^1.11.13",
@@ -60,7 +61,7 @@
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-intl": "^6.6.8",
-        "sass": "^1.79.2",
+        "sass": "^1.79.3",
         "sharp": "^0.33.5",
         "striptags": "^3.2.0",
         "swiper": "^11.1.14",
@@ -136,7 +137,7 @@
         "tsconfig-paths-webpack-plugin": "^4.1.0",
         "tsx": "^4.19.1",
         "type-fest": "^4.26.1",
-        "typescript": "^5.5.4"
+        "typescript": "^5.6.2"
     },
     "nextBundleAnalysis": {
         "budget": 230400,
