work on passageNavigation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,6 @@
 		},
 		"incremental": true
 	},
-	"exclude": ["./*.js"],
+	"exclude": ["./*.js", "**/*.graphql"],
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
 }
