--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
         "next-pwa": "^5.6.0",
         "node-forge": "^1.3.1",
         "normalize.css": "^8.0.1",
+        "p-memoize": "^7.1.1",
+        "p-throttle": "^7.0.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-intl": "^6.6.8",
