--- a/package.json
+++ b/package.json
@@ -145,6 +145,13 @@
     "overrides": {
         "next-pwa": {
             "rollup": "$rollup"
+        },
+        "cross-spawn": "^7.0.5",
+        "next": {
+            "nanoid": "^3.3.8"
+        },
+        "express": {
+            "path-to-regexp": "^0.1.12"
         }
     },
     "nextBundleAnalysis": {
