--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
         "analyze:browser": "BUNDLE_ANALYZE=browser npm run build:webpack-only",
         "svgo": "svgo -f ./public/img/icons-raw -o ./public/img/icons",
         "pa11y": "pa11y-ci --sitemap http://localhost:3000/sitemap-0.xml --sitemap-find https://www.audioverse.org --sitemap-replace http://localhost:3000 --sitemap-exclude 'https?:\\/\\/[\\w\\.-]+\\/(?!en)\\w\\w\\/'",
-        "prepare": "husky"
+        "prepare": "husky",
+        "knip": "knip"
     },
     "dependencies": {
         "@emotion/styled": "^11.13.0",
@@ -99,6 +100,7 @@
         "@types/jest-when": "^3.5.5",
         "@types/js-cookie": "^3.0.6",
         "@types/lodash": "^4.17.7",
+        "@types/node": "^22.10.2",
         "@types/node-forge": "^1.3.11",
         "@types/react": "^18.3.8",
         "@types/react-dom": "^18.3.0",
@@ -130,6 +132,7 @@
         "jest-date-mock": "^1.0.10",
         "jest-environment-jsdom": "^29.7.0",
         "jest-when": "^3.6.0",
+        "knip": "^5.41.1",
         "next-sitemap": "^4.2.3",
         "pa11y-ci": "^3.1.0",
         "prettier": "^3.3.3",
@@ -139,7 +142,7 @@
         "tsconfig-paths-webpack-plugin": "^4.1.0",
         "tsx": "^4.19.1",
         "type-fest": "^4.26.1",
-        "typescript": "^5.6.2"
+        "typescript": "^5.7.2"
     },
     "overrides": {
         "next-pwa": {
