--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "next-pwa": "^5.6.0",
         "node-forge": "^1.3.1",
         "normalize.css": "^8.0.1",
+        "p-limit": "^6.2.0",
         "p-memoize": "^7.1.1",
         "p-throttle": "^7.0.0",
         "p-timeout": "^6.1.4",
