--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "@silvermine/videojs-chromecast": "^1.5.0",
         "@tanstack/react-query": "^5.56.2",
         "@tanstack/react-query-devtools": "^5.56.2",
+        "caniuse-lite": "^1.0.30001697",
         "clsx": "^2.1.1",
         "cookie": "^0.7.0",
         "cross-spawn": "^7.0.6",
@@ -75,7 +76,8 @@
         "swiper": "^11.1.14",
         "ts-node": "^10.9.2",
         "use-debounce": "^10.0.3",
-        "video.js": "^8.17.4"
+        "video.js": "^8.17.4",
+        "zod": "^3.24.1"
     },
     "devDependencies": {
         "@calm/eslint-plugin-react-intl": "^1.4.1",
