--- a/package.json
+++ b/package.json
@@ -32,11 +32,12 @@
         "svgo": "svgo -f ./public/img/icons-raw -o ./public/img/icons",
         "pa11y": "pa11y-ci --sitemap http://localhost:3000/sitemap-0.xml --sitemap-find https://www.audioverse.org --sitemap-replace http://localhost:3000 --sitemap-exclude 'https?:\\/\\/[\\w\\.-]+\\/(?!en)\\w\\w\\/'",
         "prepare": "husky",
-        "knip": "knip",
+        "knip": "knip --no-gitignore",
         "fcbh": "tsx ./scripts/save-fcbh-meta.ts"
     },
     "dependencies": {
         "@emotion/styled": "^11.13.0",
+        "@formatjs/intl": "^3.1.4",
         "@greatsumini/react-facebook-login": "^3.3.3",
         "@leecheuk/react-google-login": "^5.4.1",
         "@mui/material": "^6.1.1",
@@ -44,10 +45,8 @@
         "@silvermine/videojs-airplay": "^1.3.0",
         "@silvermine/videojs-chromecast": "^1.5.0",
         "@tanstack/react-query": "^5.56.2",
-        "@tanstack/react-query-devtools": "^5.56.2",
         "clsx": "^2.1.1",
         "cookie": "^0.7.0",
-        "cross-spawn": "^7.0.6",
         "dayjs": "^1.11.13",
         "feed": "git+https://mattleff@github.com/mattleff/feed.git#custome-elements-build",
         "full-icu": "^1.5.0",
@@ -138,8 +137,9 @@
         "jest-date-mock": "^1.0.10",
         "jest-environment-jsdom": "^29.7.0",
         "jest-when": "^3.6.0",
-        "knip": "^5.41.1",
+        "knip": "^5.44.5",
         "next-sitemap": "^4.2.3",
+        "nextjs-bundle-analysis": "^0.5.0",
         "pa11y-ci": "^3.1.0",
         "prettier": "^3.3.3",
         "svgo": "^3.3.2",
