--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "scripts": {
         "predev": "npm run prebuild",
         "dev": "concurrently \"npm:graphql:codegen:watch\" \"next dev\"",
-        "prebuild": "concurrently \"npx update-browserslist-db@latest\" \"npm:graphql:codegen\" \"npm:cache\"",
+        "prebuild": "npm run graphql:codegen && concurrently \"npx update-browserslist-db@latest\" \"npm:cache\"",
         "build": "NODE_ICU_DATA=node_modules/full-icu next build",
         "postbuild": "next-sitemap",
         "build:dev": "ENV_OVERRIDE=development npm run build -- --debug",
