--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -3,8 +3,7 @@ on: [deployment_status]
 jobs:
   accessibility:
     if: github.event.deployment_status.state == 'success'
-    # WORKAROUND: https://github.com/pa11y/pa11y/issues/651
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     permissions:
       checks: read
       pull-requests: write
