update api key env var in ci

--- a/.github/workflows/nextjs_bundle_analysis.yml
+++ b/.github/workflows/nextjs_bundle_analysis.yml
@@ -16,7 +16,7 @@ permissions:
 
 env:
   NEXT_PUBLIC_API_URL: 'https://graphql-staging.audioverse.org/graphql'
-  BIBLE_BRAIN_KEY: ${{ secrets.BIBLE_BRAIN_KEY }}
+  NEXT_PUBLIC_BIBLE_BRAIN_KEY: ${{ secrets.BIBLE_BRAIN_KEY }}
 
 jobs:
   analyze:
