delete unused fetchFcbhChapters

--- a/.env-sample
+++ b/.env-sample
@@ -4,3 +4,4 @@ SESSION_TOKEN_TRANSPORT_KEY="base64-abc123"
 SESSION_TOKEN_TRANSPORT_IV="base64-abc123"
 NEXT_PUBLIC_SEGMENT_KEY=
 LOG_NETWORK_REQUESTS=false
+DISABLE_NETWORK_MEMOIZATION=false
