dont run e2e jobs concurrently

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -27,6 +27,7 @@ jobs:
   lighthouse:
     if: github.event.deployment_status.state == 'success'
     runs-on: ubuntu-latest
+    needs: accessibility # Don't run concurrently to reduce chance of rate limiting
     permissions:
       checks: read
       pull-requests: write
